refactor: update endpoint to be more RESTFul
